modification de mon application pour les tests sonar 1;1